C2 compilation fails with assert "missing precedence edge"

XMLWordPrintable

    • b30
    • Verified

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/oracle/jdk/open/src/hotspot/share/opto/gcm.cpp:830), pid=627780, tid=627848
        # assert(store->find_edge(load) != -1) failed: missing precedence edge

        Current CompileTask:
        C2: 1324 487 4 MainClass::e (37 bytes)

        Stack: [0x00007f99917f8000,0x00007f99918f9000], sp=0x00007f99918f4000, free space=1008k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xd250e8] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0x16c8
        V [libjvm.so+0x6c60e4] PhaseCFG::verify() const+0x664
        V [libjvm.so+0xa1fc3f] Compile::Code_Gen()+0x2af
        V [libjvm.so+0xa2ac5c] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x19dc
        V [libjvm.so+0x853f2a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
        V [libjvm.so+0xa3a9d1] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xf21
        V [libjvm.so+0xa3b678] CompileBroker::compiler_thread_loop()+0x5a8
        V [libjvm.so+0x1865bc1] JavaThread::thread_main_inner()+0x271
        V [libjvm.so+0x186dd00] Thread::call_run()+0x100
        V [libjvm.so+0x1559466] thread_native_entry(Thread*)+0x116

          1. MainClass.java
            0.4 kB
            Tobias Hartmann
          2. hotspot_pid278043.log
            2 kB
            Tobias Hartmann
          3. hotspot_pid278061.log
            3.27 MB
            Tobias Hartmann
          4. Reduced.java
            0.4 kB
            Roberto Castaneda Lozano
          5. afterImplicitNullCheck
            7 kB
            Jamsheed C M
          6. beforeImplicitNullCheck
            7 kB
            Jamsheed C M

              Assignee:
              Jamsheed C M (Inactive)
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: