8265132: C2 compilation fails with assert "missing precedence edge"

Reviewed-by: roland
Backport-of: 5644c4f942d9280ecc2dd3fdcd1680db6621da27